package org_longjiang_game_web_controller;


option java_package = "org.longjiang.game.web.controller";

message CreateRole {
  optional int64 accountId = 1;
  optional string token = 2;
  optional string roleName = 3;
}

